Added RecyclerView and Card View Forced Portrait Orientation Mimic example app for Rx driven Lifecycle Architecture components Implement AppDelegate to get AppCompat functionality Some restructuring

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:theme="@style/AppTheme"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="larmour.daniel.theaccountingapp.MainActivity">
+    tools:context="larmour.daniel.theaccountingapp.ui.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home"/>
-
-    </FrameLayout>
+    <include layout="@layout/layout_toolbar"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -35,4 +18,4 @@
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
