--- a/TheAccountingApp/app/src/main/res/layout/activity_profile.xml
+++ b/TheAccountingApp/app/src/main/res/layout/activity_profile.xml
@@ -2,16 +2,25 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent">
-    <include layout="@layout/layout_toolbar"/>
-    
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/layout_toolbar"
+            layout="@layout/layout_toolbar"/>
+
         <TextView
             android:id="@+id/tv_profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="@dimen/default_padding"
             android:textSize="24sp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/colorAccent"
+            android:text="@string/username"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
