Added new text oriented dimens Added new text view to show ird number Added new field to User model New check for Instance nulling in UserDatabase new Constructors for User model Added ConstraintLayout and used it in Profile Activity

--- a/TheAccountingApp/app/src/main/res/layout/activity_profile.xml
+++ b/TheAccountingApp/app/src/main/res/layout/activity_profile.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <include
             android:id="@+id/layout_toolbar"
@@ -19,8 +13,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/default_padding"
-            android:textSize="24sp"
+            android:textSize="@dimen/h1"
             android:textColor="@color/colorAccent"
-            android:text="@string/username"/>
-    </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+            android:text="@string/username"
+            app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_ird_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/default_padding"
+        android:textSize="@dimen/h1"
+        android:textColor="@color/colorAccent"
+        android:text="@string/username"
+        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+</android.support.constraint.ConstraintLayout>
